--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ rust-version = "1.85.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.40"
+itertools = "0.14.0"
