--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ chrono-tz = "0.10.1"
 itertools = "0.14.0"
 nom = "8.0.0"
 rayon = "1.10.0"
+thiserror = "2.0.12"
 unicode-normalization = "0.1.24"
 unidecode = "0.3.0"
